Fixed text align on main h1

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 .main h1 {
   position: relative;
   top: 180px;
-  text-align: centre;
+  text-align: center;
 }
 
 .btn-main {
